--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-03 02:55 -->
+<!-- 2022-10-03 08:43 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -33,46 +33,46 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgdbd0b37">1. 妙妙文章</a>
+<li><a href="#org581681e">1. 妙妙文章</a>
 <ul>
-<li><a href="#org9d3fda3">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org08f0c41">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org101aa51">1.3. 关于编辑器</a></li>
-<li><a href="#org8774c1a">1.4. 关于代码</a></li>
-<li><a href="#orgf92d888">1.5. 关于CPU</a>
+<li><a href="#orgb226db4">1.1. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org157c8cb">1.2. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org97d9003">1.3. 关于编辑器</a></li>
+<li><a href="#orgb29936f">1.4. 关于代码</a></li>
+<li><a href="#orge829a78">1.5. 关于CPU</a>
 <ul>
-<li><a href="#orgcce2cd8">1.5.1. Lisp</a></li>
+<li><a href="#orgc66efe9">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#orgc825900">1.6. 关于算法</a>
+<li><a href="#org4a1c287">1.6. 关于算法</a>
 <ul>
-<li><a href="#orgd76074e">1.6.1. 关于随机</a></li>
+<li><a href="#org39f5b16">1.6.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgae1efd6">1.7. 关于AI</a></li>
-<li><a href="#org22268d1">1.8. 关于软件</a>
+<li><a href="#org27bb01e">1.7. 关于AI</a></li>
+<li><a href="#orgfe42edc">1.8. 关于软件</a>
 <ul>
-<li><a href="#org37753e9">1.8.1. SQLite</a></li>
+<li><a href="#org0ec47f9">1.8.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgca55b9e">1.9. 关于workflow</a></li>
+<li><a href="#orgf6650f8">1.9. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org0101672">2. 棒棒视频</a>
+<li><a href="#orge056ff6">2. 棒棒视频</a>
 <ul>
-<li><a href="#org7c66903">2.1. Veritasium 真理元素</a></li>
-<li><a href="#orga6f3a55">2.2. 各种剧</a></li>
-<li><a href="#org854c547">2.3. 电影</a></li>
+<li><a href="#org3420f83">2.1. Veritasium 真理元素</a></li>
+<li><a href="#org0c33ec6">2.2. 各种剧</a></li>
+<li><a href="#org0002669">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orgd1647dc">3. 快乐游戏</a></li>
-<li><a href="#orgbf4a293">4. 宝藏博主</a></li>
-<li><a href="#org5b8a471">5. 有意思的</a>
+<li><a href="#org9be86dc">3. 快乐游戏</a></li>
+<li><a href="#orga779de0">4. 宝藏博主</a></li>
+<li><a href="#org858eddf">5. 有意思的</a>
 <ul>
-<li><a href="#org131f7d7">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgfb88962">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#org471a46d">6. 我想玩的</a></li>
+<li><a href="#org8af34a6">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -81,8 +81,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-orgdbd0b37" class="outline-2">
-<h2 id="orgdbd0b37"><span class="section-number-2">1.</span> <a href="#orgdbd0b37">妙妙文章</a></h2>
+<div id="outline-container-org581681e" class="outline-2">
+<h2 id="org581681e"><span class="section-number-2">1.</span> <a href="#org581681e">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -441,7 +441,7 @@ cards until the game is over.
 </p></li>
 </ul>
 
-<figure id="orgb5dd962">
+<figure id="org193857d">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg">
 
 </figure>
@@ -505,8 +505,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org9d3fda3" class="outline-3">
-<h3 id="org9d3fda3"><span class="section-number-3">1.1.</span> <a href="#org9d3fda3">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-orgb226db4" class="outline-3">
+<h3 id="orgb226db4"><span class="section-number-3">1.1.</span> <a href="#orgb226db4">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -536,8 +536,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org08f0c41" class="outline-3">
-<h3 id="org08f0c41"><span class="section-number-3">1.2.</span> <a href="#org08f0c41">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org157c8cb" class="outline-3">
+<h3 id="org157c8cb"><span class="section-number-3">1.2.</span> <a href="#org157c8cb">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -571,8 +571,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org101aa51" class="outline-3">
-<h3 id="org101aa51"><span class="section-number-3">1.3.</span> <a href="#org101aa51">关于编辑器</a></h3>
+<div id="outline-container-org97d9003" class="outline-3">
+<h3 id="org97d9003"><span class="section-number-3">1.3.</span> <a href="#org97d9003">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><p>
@@ -588,8 +588,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-org8774c1a" class="outline-3">
-<h3 id="org8774c1a"><span class="section-number-3">1.4.</span> <a href="#org8774c1a">关于代码</a></h3>
+<div id="outline-container-orgb29936f" class="outline-3">
+<h3 id="orgb29936f"><span class="section-number-3">1.4.</span> <a href="#orgb29936f">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don&rsquo;t read code like it&rsquo;s a
@@ -615,8 +615,8 @@ future.</li>
 </div>
 </div>
 
-<div id="outline-container-orgf92d888" class="outline-3">
-<h3 id="orgf92d888"><span class="section-number-3">1.5.</span> <a href="#orgf92d888">关于CPU</a></h3>
+<div id="outline-container-orge829a78" class="outline-3">
+<h3 id="orge829a78"><span class="section-number-3">1.5.</span> <a href="#orge829a78">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><p>
@@ -630,8 +630,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </ul>
 </div>
 
-<div id="outline-container-orgcce2cd8" class="outline-4">
-<h4 id="orgcce2cd8"><span class="section-number-4">1.5.1.</span> <a href="#orgcce2cd8">Lisp</a></h4>
+<div id="outline-container-orgc66efe9" class="outline-4">
+<h4 id="orgc66efe9"><span class="section-number-4">1.5.1.</span> <a href="#orgc66efe9">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -654,8 +654,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-orgc825900" class="outline-3">
-<h3 id="orgc825900"><span class="section-number-3">1.6.</span> <a href="#orgc825900">关于算法</a></h3>
+<div id="outline-container-org4a1c287" class="outline-3">
+<h3 id="org4a1c287"><span class="section-number-3">1.6.</span> <a href="#org4a1c287">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -674,8 +674,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orgd76074e" class="outline-4">
-<h4 id="orgd76074e"><span class="section-number-4">1.6.1.</span> <a href="#orgd76074e">关于随机</a></h4>
+<div id="outline-container-org39f5b16" class="outline-4">
+<h4 id="org39f5b16"><span class="section-number-4">1.6.1.</span> <a href="#org39f5b16">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-6-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -689,8 +689,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgae1efd6" class="outline-3">
-<h3 id="orgae1efd6"><span class="section-number-3">1.7.</span> <a href="#orgae1efd6">关于AI</a></h3>
+<div id="outline-container-org27bb01e" class="outline-3">
+<h3 id="org27bb01e"><span class="section-number-3">1.7.</span> <a href="#org27bb01e">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -700,8 +700,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org22268d1" class="outline-3">
-<h3 id="org22268d1"><span class="section-number-3">1.8.</span> <a href="#org22268d1">关于软件</a></h3>
+<div id="outline-container-orgfe42edc" class="outline-3">
+<h3 id="orgfe42edc"><span class="section-number-3">1.8.</span> <a href="#orgfe42edc">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -712,8 +712,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-org37753e9" class="outline-4">
-<h4 id="org37753e9"><span class="section-number-4">1.8.1.</span> <a href="#org37753e9">SQLite</a></h4>
+<div id="outline-container-org0ec47f9" class="outline-4">
+<h4 id="org0ec47f9"><span class="section-number-4">1.8.1.</span> <a href="#org0ec47f9">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-8-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -727,8 +727,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgca55b9e" class="outline-3">
-<h3 id="orgca55b9e"><span class="section-number-3">1.9.</span> <a href="#orgca55b9e">关于workflow</a></h3>
+<div id="outline-container-orgf6650f8" class="outline-3">
+<h3 id="orgf6650f8"><span class="section-number-3">1.9.</span> <a href="#orgf6650f8">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -738,8 +738,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org0101672" class="outline-2">
-<h2 id="org0101672"><span class="section-number-2">2.</span> <a href="#org0101672">棒棒视频</a></h2>
+<div id="outline-container-orge056ff6" class="outline-2">
+<h2 id="orge056ff6"><span class="section-number-2">2.</span> <a href="#orge056ff6">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -809,8 +809,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-org7c66903" class="outline-3">
-<h3 id="org7c66903"><span class="section-number-3">2.1.</span> <a href="#org7c66903">Veritasium 真理元素</a></h3>
+<div id="outline-container-org3420f83" class="outline-3">
+<h3 id="org3420f83"><span class="section-number-3">2.1.</span> <a href="#org3420f83">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You&rsquo;ve Never Heard Of</a>
@@ -835,8 +835,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orga6f3a55" class="outline-3">
-<h3 id="orga6f3a55"><span class="section-number-3">2.2.</span> <a href="#orga6f3a55">各种剧</a></h3>
+<div id="outline-container-org0c33ec6" class="outline-3">
+<h3 id="org0c33ec6"><span class="section-number-3">2.2.</span> <a href="#org0c33ec6">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -853,12 +853,14 @@ and exist, before it is generally received and practiced on.
 <li>鱿鱼游戏</li>
 <li>权力的游戏</li>
 <li>成龙历险记 (童年的回忆2.0)</li>
+<li>间谍过家家 (哇酷哇酷!)</li>
+<li>赛博朋克：边缘行者 (555我的Rebecca)</li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org854c547" class="outline-3">
-<h3 id="org854c547"><span class="section-number-3">2.3.</span> <a href="#org854c547">电影</a></h3>
+<div id="outline-container-org0002669" class="outline-3">
+<h3 id="org0002669"><span class="section-number-3">2.3.</span> <a href="#org0002669">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -883,8 +885,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgd1647dc" class="outline-2">
-<h2 id="orgd1647dc"><span class="section-number-2">3.</span> <a href="#orgd1647dc">快乐游戏</a></h2>
+<div id="outline-container-org9be86dc" class="outline-2">
+<h2 id="org9be86dc"><span class="section-number-2">3.</span> <a href="#org9be86dc">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -913,8 +915,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgbf4a293" class="outline-2">
-<h2 id="orgbf4a293"><span class="section-number-2">4.</span> <a href="#orgbf4a293">宝藏博主</a></h2>
+<div id="outline-container-orga779de0" class="outline-2">
+<h2 id="orga779de0"><span class="section-number-2">4.</span> <a href="#orga779de0">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -926,15 +928,15 @@ and exist, before it is generally received and practiced on.
 </p></li>
 </ul>
 
-<figure id="org9bbd6e3">
+<figure id="orgb4cdec0">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png">
 
 </figure>
 </div>
 </div>
 
-<div id="outline-container-org5b8a471" class="outline-2">
-<h2 id="org5b8a471"><span class="section-number-2">5.</span> <a href="#org5b8a471">有意思的</a></h2>
+<div id="outline-container-org858eddf" class="outline-2">
+<h2 id="org858eddf"><span class="section-number-2">5.</span> <a href="#org858eddf">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -958,8 +960,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-org131f7d7" class="outline-3">
-<h3 id="org131f7d7"><span class="section-number-3">5.1.</span> <a href="#org131f7d7">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgfb88962" class="outline-3">
+<h3 id="orgfb88962"><span class="section-number-3">5.1.</span> <a href="#orgfb88962">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -971,8 +973,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-org471a46d" class="outline-2">
-<h2 id="org471a46d"><span class="section-number-2">6.</span> <a href="#org471a46d">我想玩的</a></h2>
+<div id="outline-container-org8af34a6" class="outline-2">
+<h2 id="org8af34a6"><span class="section-number-2">6.</span> <a href="#org8af34a6">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -994,8 +996,8 @@ Always check your friendship before terminating it.  hhhh</li>
 <hr><table class="postamble">
   <tr><td class="org-right">Author</td><td class="org-left"></td></tr>
   <tr><td class="org-right">Created</td><td class="org-left"></td></tr>
-  <tr><td class="org-right">Modified</td><td class="org-left">2022-09-30 19:15</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-03 02:55</td></tr>
+  <tr><td class="org-right">Modified</td><td class="org-left">2022-10-03 08:42</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-03 08:43</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
