--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-04 03:00 -->
+<!-- 2022-10-04 20:47 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -16,10 +16,12 @@
 
   gtag('config', 'G-21YM95T3BQ');
 </script>
+<!-- favicon -->
+<link rel="icon" type="image/x-icon" href="../../favicon.ico">
 <!-- CSS -->
-<link rel="stylesheet" type="text/css" href="https://unpkg.com/latex.css/style.css"/>
-<link rel="stylesheet" type="text/css" href="../../css/org-default.css"/>
-<link rel="stylesheet" type="text/css" href="../../css/style.css"/>
+<link rel="stylesheet" type="text/css" href="https://unpkg.com/latex.css/style.css">
+<link rel="stylesheet" type="text/css" href="../../css/org-default.css">
+<link rel="stylesheet" type="text/css" href="../../css/style.css">
 </head>
 <body>
 <div id="preamble" class="status">
@@ -34,19 +36,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org012c15d">1. 暑假</a>
+<li><a href="#orgc3b97a2">1. 暑假</a>
 <ul>
-<li><a href="#orgbc6305e">1.1. 夏令营</a></li>
+<li><a href="#org9c9ac98">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#org46e1724">2. 打工</a></li>
-<li><a href="#orgf0f8eee">3. 我的928</a>
+<li><a href="#org9ed27a6">2. 打工</a></li>
+<li><a href="#org06e8244">3. 我的928</a>
 <ul>
-<li><a href="#org218108c">3.1. 928演唱会(bushi</a></li>
+<li><a href="#orgf2f2c27">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#orgc956337">4. 他们的928</a></li>
-<li><a href="#orgf73aa89">5. 总结</a></li>
+<li><a href="#orga3e8230">4. 他们的928</a></li>
+<li><a href="#org4a1c409">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -56,7 +58,7 @@
 </p>
 
 
-<figure id="org9f11afb">
+<figure id="org530b83e">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 1: </span>南大offer</figcaption>
@@ -79,8 +81,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org012c15d" class="outline-2">
-<h2 id="org012c15d"><span class="section-number-2">1.</span> <a href="#org012c15d">暑假</a></h2>
+<div id="outline-container-orgc3b97a2" class="outline-2">
+<h2 id="orgc3b97a2"><span class="section-number-2">1.</span> <a href="#orgc3b97a2">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -104,8 +106,8 @@
 </p>
 </div>
 
-<div id="outline-container-orgbc6305e" class="outline-3">
-<h3 id="orgbc6305e"><span class="section-number-3">1.1.</span> <a href="#orgbc6305e">夏令营</a></h3>
+<div id="outline-container-org9c9ac98" class="outline-3">
+<h3 id="org9c9ac98"><span class="section-number-3">1.1.</span> <a href="#org9c9ac98">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -147,8 +149,8 @@
 </div>
 </div>
 
-<div id="outline-container-org46e1724" class="outline-2">
-<h2 id="org46e1724"><span class="section-number-2">2.</span> <a href="#org46e1724">打工</a></h2>
+<div id="outline-container-org9ed27a6" class="outline-2">
+<h2 id="org9ed27a6"><span class="section-number-2">2.</span> <a href="#org9ed27a6">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -162,8 +164,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgf0f8eee" class="outline-2">
-<h2 id="orgf0f8eee"><span class="section-number-2">3.</span> <a href="#orgf0f8eee">我的928</a></h2>
+<div id="outline-container-org06e8244" class="outline-2">
+<h2 id="org06e8244"><span class="section-number-2">3.</span> <a href="#org06e8244">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -179,8 +181,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-org218108c" class="outline-3">
-<h3 id="org218108c"><span class="section-number-3">3.1.</span> <a href="#org218108c">928演唱会(bushi</a></h3>
+<div id="outline-container-orgf2f2c27" class="outline-3">
+<h3 id="orgf2f2c27"><span class="section-number-3">3.1.</span> <a href="#orgf2f2c27">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -188,7 +190,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org6312599">
+<figure id="org2884680">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 2: </span>被挡在外面</figcaption>
@@ -200,7 +202,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org37a9159">
+<figure id="orgc87ff1b">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">Figure 3: </span>在观众席上</figcaption>
@@ -213,8 +215,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgc956337" class="outline-2">
-<h2 id="orgc956337"><span class="section-number-2">4.</span> <a href="#orgc956337">他们的928</a></h2>
+<div id="outline-container-orga3e8230" class="outline-2">
+<h2 id="orga3e8230"><span class="section-number-2">4.</span> <a href="#orga3e8230">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -234,8 +236,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgf73aa89" class="outline-2">
-<h2 id="orgf73aa89"><span class="section-number-2">5.</span> <a href="#orgf73aa89">总结</a></h2>
+<div id="outline-container-org4a1c409" class="outline-2">
+<h2 id="org4a1c409"><span class="section-number-2">5.</span> <a href="#org4a1c409">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -250,7 +252,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-04 03:00</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-04 20:47</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
