--- a/content/gadgets.html
+++ b/content/gadgets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-04 03:00 -->
+<!-- 2022-10-04 20:47 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>我的小玩意们</title>
@@ -16,10 +16,12 @@
 
   gtag('config', 'G-21YM95T3BQ');
 </script>
+<!-- favicon -->
+<link rel="icon" type="image/x-icon" href="../favicon.ico">
 <!-- CSS -->
-<link rel="stylesheet" type="text/css" href="https://unpkg.com/latex.css/style.css"/>
-<link rel="stylesheet" type="text/css" href="../css/org-default.css"/>
-<link rel="stylesheet" type="text/css" href="../css/style.css"/>
+<link rel="stylesheet" type="text/css" href="https://unpkg.com/latex.css/style.css">
+<link rel="stylesheet" type="text/css" href="../css/org-default.css">
+<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 <div id="preamble" class="status">
@@ -36,7 +38,7 @@
 </p>
 
 <ul class="org-ul">
-<li>Bose QC35 ii (为了降低sb舍友的噪声,结果效果并不太好), 2021-06-03, 共 1067.00, 平均每天 2.19</li>
+<li>Bose QC35 ii (为了降低sb舍友的噪声,结果效果并不太好), 2021-06-03, 共 1067.00, 平均每天 2.18</li>
 <li>NB 显示器支架, 2021-05-12, 共 160.50, 平均每天 0.31</li>
 <li>XBox Series S 手柄 (扳机键比较拉垮), 2021-02-14, 共 577.00, 平均每天 0.97</li>
 <li>致钛 1T SSD, 2021-01-01, 共 698.00, 平均每天 1.09</li>
@@ -48,8 +50,8 @@
 <li>小米手环4, 2019-10-06, 共 168.98, 平均每天 0.15</li>
 <li>Redmi Note 8 Pro, 2019-10-02, 共 1799.00, 平均每天 1.64</li>
 <li>凉鞋, 2019-09-23, 共 178.00, 平均每天 0.16</li>
-<li>XBox Series S (西瓜皮 yyds; 双人成行好好玩), 2022-05-31, 共 2399.00, 平均每天 19.02</li>
-<li>美的电水壶 (烧水比天然气的快多了), 2022-06-27, 共 139.00, 平均每天 1.40</li>
+<li>XBox Series S (西瓜皮 yyds; 双人成行好好玩), 2022-05-31, 共 2399.00, 平均每天 18.91</li>
+<li>美的电水壶 (烧水比天然气的快多了), 2022-06-27, 共 139.00, 平均每天 1.39</li>
 </ul>
 </div>
 <div id="postamble" class="status">
@@ -57,7 +59,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-06-04 10:45</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-28 15:21</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-04 03:00</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-04 20:47</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/gadgets.org">content/gadgets.org</a></td></tr>
 </table>
