--- a/content/qq-group-export.html
+++ b/content/qq-group-export.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2022-10-04 03:00 -->
+<!-- 2022-10-04 20:47 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>导出QQ群成员</title>
@@ -16,10 +16,12 @@
 
   gtag('config', 'G-21YM95T3BQ');
 </script>
+<!-- favicon -->
+<link rel="icon" type="image/x-icon" href="../favicon.ico">
 <!-- CSS -->
-<link rel="stylesheet" type="text/css" href="https://unpkg.com/latex.css/style.css"/>
-<link rel="stylesheet" type="text/css" href="../css/org-default.css"/>
-<link rel="stylesheet" type="text/css" href="../css/style.css"/>
+<link rel="stylesheet" type="text/css" href="https://unpkg.com/latex.css/style.css">
+<link rel="stylesheet" type="text/css" href="../css/org-default.css">
+<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <body>
 <div id="preamble" class="status">
@@ -34,15 +36,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orge8618a0">1. 导出成员</a></li>
-<li><a href="#orgea7c56f">2. 交叉对比</a></li>
+<li><a href="#orgab8e577">1. 导出成员</a></li>
+<li><a href="#orgf924e53">2. 交叉对比</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orge8618a0" class="outline-2">
-<h2 id="orge8618a0"><span class="section-number-2">1.</span> <a href="#orge8618a0">导出成员</a></h2>
+<div id="outline-container-orgab8e577" class="outline-2">
+<h2 id="orgab8e577"><span class="section-number-2">1.</span> <a href="#orgab8e577">导出成员</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 来自: <a href="https://www.zhihu.com/question/58753010/answer/1354673772">如何批量导出QQ群成员的QQ号/QQ邮箱等相关信息？ - 大发撸卡的回答 - 知乎</a>
@@ -70,8 +72,8 @@ console.log(t);
 </div>
 </div>
 
-<div id="outline-container-orgea7c56f" class="outline-2">
-<h2 id="orgea7c56f"><span class="section-number-2">2.</span> <a href="#orgea7c56f">交叉对比</a></h2>
+<div id="outline-container-orgf924e53" class="outline-2">
+<h2 id="orgf924e53"><span class="section-number-2">2.</span> <a href="#orgf924e53">交叉对比</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 交叉对比两个群的QQ号:
@@ -92,7 +94,7 @@ console.log(t);
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-29 16:05</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 16:09</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-04 03:00</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-04 20:47</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/qq-group-export.org">content/qq-group-export.org</a></td></tr>
 </table>
